# aiomax

./: .gitignore  404.html  CNAME  LICENSE  README.md  README_REFACTOR.md  bot.py  config.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
aiomax/: __init__.py  dispatcher.py  filters.py  fsm.py  router.py
aiomax/api_methods/: __init__.py  base_method.py  delete_bot_from_chat.py  delete_chat_by_chat_id.py  delete_member_from_chat.py  delete_message.py  delete_permissions_from_chat.py  delete_pin_message.py  get_chat_admins.py  get_chat_info_by_chat_id.py  get_chat_members.py  get_chats.py  get_me.py  get_me_from_chats.py  get_message.py  get_messages.py  get_pinned_message.py  get_updates.py  patch_chat_info_by_chat_id.py  post_add_members_to_chat.py  post_chat_actions.py  post_chat_admins.py  put_message.py  put_pin_message_to_chat.py  send_answer.py  send_message.py  update_chat_info_by_chat_id.py
aiomax/client/: __init__.py  bot.py  client.py
aiomax/dispatcher/: dispatcher.py
aiomax/enums/: api_enums.py  attachment_type_enum.py  button_type_enum.py  chat_action_enums.py  chat_status_enum.py  chat_type.py  message_link_type_enum.py  permissions.py  request_metod.py  text_style_enum.py  update_type.py
aiomax/handlers/: __init__.py  dispatcher.py  filters.py  fsm.py  (+3 more)
api/: index.html
bot/: index.html
docs/: api.md  bot.md  index.md
exambple/: all_bot.py
examlple/: callback_bot.py  echo_bot.py  filtered_bot.py  fsm_bot.py  long_polling_bot.py  send_message_examples.py  webhook_bot.py
examples/: bot_example.py
search/: search_index.json
(+93 files in other folders)
