[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomax"
version = "0.1.0"
description = "Async Max framework"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = [
    "aiohttp>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
