[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiomax-python"
version = "0.1.8"
description = "Async Max framework"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Boris Bogatyrev", email = "twoballs20@gmail.com" }
]

license = { text = "MIT" }

dependencies = [
    "aiohttp>=3.8",
    "pydantic>=2.5"
]

keywords = ["async", "max", "bot", "framework"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://aiomax.ru"
Repository = "https://github.com/aiomaxdev/aiomax"

[tool.setuptools.packages.find]
where = ["."]